# multi-cloud

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: notes.md  styleguide.md
docs/api/: MultiCloudEvent.md  api.md
docs/reference/: multicloud_cli.md  multicloud_yaml.md
examples/test_build/knative/: func.yaml  pyproject.toml
examples/test_build/knative/function/: func.py  handler.py
scripts/: unit_tests_all_versions.sh
src/multi_cloud/functions/knative/: __init__.py  parsers.py
src/multicloud/cli/: main.py
src/multicloud/cli/commands/: build_command.py  config_command.py
src/multicloud/cli/config/: __init__.py  config_manager.py
src/multicloud/cli/templates/multicloud/: multicloud.yaml.j2
src/multicloud/functions/: __init__.py
src/multicloud/functions/common/: multicloud_event.py
src/multicloud/functions/knative/: __init__.py  adapters.py
tests/: conftest.py
tests/fixtures/: multicloud_event_fixtures.py
tests/functions/: test_knative_adapters.py  test_multicloud_event.py
tests/unit_tests/functions/: test_multicloud_event.py
