[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multicloud"
version = "0.1.0"
description = "Multi-Cloud serverless framework"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Kyle Ranous", email = "kranous05@gmail.com"}
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multicloud"]