[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multicloud"
version = "0.1.0"
description = "Multi-Cloud serverless framework"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Kyle Ranous", email = "kranous05@gmail.com"}
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multicloud"]

[project.optional-dependencies]
def = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "pylint"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as an asyncio coroutine"
]
testpaths = ["tests"]